# migration-analysis

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  review.sh  run.py  run.sh
configs/: collect.yaml
data/: attendance_payroll_audit_s2l_extra_high.json  attendance_payroll_audit_s2l_high.json  attendance_payroll_audit_s2l_medium.json  budget_approval_s2l_extra_high.json  budget_approval_s2l_high.json  budget_approval_s2l_medium.json  machine_operating_s2l.json  refactorbench.json  webarena_shopping_admin_easy.json  webtest.json  woocommerce_stock_alert_s2l.json
docs/: adaptation.md  diagnostics.md  read_trajectory.md  sdk_reference.md  sdk_reference_base.md
docs/sdk_reference_details/: 01_llm.md  02_agent.md  03_tool_spec.md  04_conversation.md  05_agent_context.md  06_skill.md  07_custom_tool_definition_pattern.md  08_condensers.md  09_hooks.md  10_built_in_tools.md  11_mcp_integration.md  13_critic.md  (+5 more)
replication_package/: .gitignore  pyproject.toml
replication_package/data/: curated_run_eval_inputs.json  manual_labels_raw.txt  model_intelligence_index.json  task_template_scores.json
replication_package/outputs/: migration_analysis_figshare_core.instructions.txt  migration_analysis_figshare_core.manifest.json  migration_analysis_run_eval_artifacts.manifest.json
replication_package/outputs/data/: included_task_model_seed_triplets.csv  included_task_model_seed_triplets.json  manual_labels.json  selected_test_rows.json  tableau_data.json  task_diversity_metrics.json
replication_package/outputs/tables/: results_table.md  results_table.tex
replication_package/scripts/: build_curated_run_eval_inputs.py  build_triplet_coverage.py  collect_run_data.py  compute_task_diversity.py  derive_tableau_data.py  normalize_manual_labels.py  package_figshare_core.py  package_run_eval_artifacts.py  plot_cost_performance_quadrants.py  plot_intelligence_performance.py  plot_trajectory_diversity_score.py  render_all.py  render_from_intermediates.py  render_table.py
src/: analysis_utils.py  bandits_optimize.py  collect.py  dataloader.py  debug_utils.py  docker_utils.py  evaluate.py  gepa_optimize.py  optimize.py  run_task.py  runner.py  utils.py
tasks/: Dockerfile  Dockerfile.loca
(+161 files in other folders)
