[project]
name = "migration-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.3",
    "datasets>=4.4.1",
    "dspy>=3.0.4",
    "google-auth>=2.47.0",
    "google-cloud-aiplatform>=1.145.0",
    "matplotlib>=3.10.8",
    "openhands-sdk",
    "openhands-tools",
    "openhands-workspace",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "pymupdf>=1.24.0",
    "pyyaml>=6.0.0",
    "wandb>=0.23.1",
    "openpyxl>=3.1.5",
    "altair>=6.1.0",
    "vl-convert-python>=1.9.0.post1",
    "streamlit>=1.56.0",
    "scikit-learn>=1.8.0",
    "pytest-playwright>=0.7.2",
]

[tool.uv.sources]
openhands-sdk = { path = "software-agent-sdk/openhands-sdk", editable = true }
openhands-tools = { path = "software-agent-sdk/openhands-tools", editable = true }
openhands-workspace = { path = "software-agent-sdk/openhands-workspace", editable = true }
