[project]
name = "migration-analysis-replication-package"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.1.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.8.0",
    "tabulate>=0.10.0",
    "vl-convert-python>=1.9.0.post1",
]
